src/test/ui/consts/control-flow/try.stderr
error[E0744]: `?` is not allowed in a `const fn`
  --> $DIR/try.rs:6:5
   |
LL |     x?;
   |     ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0744`.
